azure-pipelines/infra/k8s/generated/frontend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: task-api
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: task-api
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
